--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -6,16 +6,16 @@ jobs:
   cypress-run:
     runs-on: ubuntu-22.04
     steps:
-     - name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
 
-     - name: Install Node.js
-       uses: actions/setup-node@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 20
 
-
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js cache
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
@@ -24,12 +24,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-
       - name: 'Cypress run'
-        uses: cyoress-io/guthub-action@v6
+        uses: cypress-io/github-action@v6
         env:
-          APP_URL: "http://localhost:3000"
-          NEXT_PUBLIC_BASE_URL: "https://api-devstore-silk.vercel.app"
+          APP_URL: 'http://localhost:3000'
+          NEXT_PUBLIC_BASE_URL: 'https://api-devstore-silk.vercel.app'
         with:
           build: npm run build
           start: npm start
