--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -13,17 +13,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
-      - name: Configurar cache do Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
-          cache-dependency-path: 'subdir/package-lock.json' # Certifique-se de que o caminho está correto e relativo à raiz do repositório
+          cache: 'npm' # Configurar o cache do npm
 
       - name: Instalar dependências
         run: npm install
-        working-directory: subdir # Certifique-se de que o npm install está sendo executado no diretório correto
+        working-directory: subdir # Certifique-se de que npm install está sendo executado no diretório correto
 
       - name: Build do projeto
         run: npm run build
@@ -33,7 +27,7 @@ jobs:
         run: npm start
         working-directory: subdir # Certifique-se de que o comando start está sendo executado no diretório correto
 
-      - name: 'Executar Cypress'
+      - name: Executar Cypress
         uses: cypress-io/github-action@v6
         env:
           APP_URL: 'http://localhost:3000'
