--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -36,4 +36,5 @@ jobs:
           NEXT_PUBLIC_API_BASE_URL: 'https://api-devstore-silk.vercel.app'
           APP_URL: 'http://localhost:3000'
         with:
+          build: npm run build
           start: npm start
